# Applied-Machine-Learning

./: README.md
Classification of Image Data with MLPs and CNNs/code/: A3_551.ipynb
Emotion Classification using LLMs/code/: TextDataset.py  finetuneLLM.py  finetune_utils.py  view_attention.ipynb
Linear and Logistic Regression/code/: README.md  environment.yml  pyproject.toml
Linear and Logistic Regression/code/comp551_a1/: main.py
Linear and Logistic Regression/code/comp551_a1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Linear and Logistic Regression/code/comp551_a1/config/: linear_config.json  logistic_config.json
Linear and Logistic Regression/code/comp551_a1/models/: classification.py  regression.py
Linear and Logistic Regression/code/comp551_a1/plots/: data_description.csv
Linear and Logistic Regression/code/comp551_a1/tests/: test_classification.py  test_linreg.py
Linear and Logistic Regression/code/comp551_a1/utils/: data_statistics 2.py  data_utils.py  log_config.py  preprocess.py
Regularization and Model Evaluation/code/: A2_551.ipynb
